syntax = "proto3";
package defundhub.defund.etf;

import "gogoproto/gogo.proto";

import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/defund-labs/defund/x/etf/types";

message Holding {
  cosmos.base.v1beta1.Coin token = 1;
  int64 percent = 2;
  // Pool ID of the Pool for this holding on Broker
  string poolId = 3;
}

message Fund {
  string id = 1;
  string address = 2; 
  string symbol = 3; 
  string name = 4; 
  string description = 5; 
  cosmos.base.v1beta1.Coin shares = 6 [
    (gogoproto.moretags) = "yaml:\"total_shares\"",
    (gogoproto.nullable) = false
  ];
  string broker = 7;
  repeated Holding holdings = 8 [
    (gogoproto.moretags) = "yaml:\"holdings\" json:\"holdings\"",
    (gogoproto.nullable) = false
  ];
  int64 rebalance = 9;
  cosmos.base.v1beta1.Coin baseDenom = 10;
  string connectionId = 11;
  string creator = 12;
}

message Invest {
  string creator = 1;
  string fund = 2;
  cosmos.base.v1beta1.Coin investment = 3;
  string channel = 4;
  string sequence = 5;
  string status = 6;
}

message Uninvest {
  string creator = 1;
  string fund = 2;
  cosmos.base.v1beta1.Coin uninvestment = 3;
  string channel = 4;
  string sequence = 5;
  string status = 6;
}

