syntax = "proto3";
package defundhub.defund.query;

option go_package = "github.com/defund-labs/defund/x/query/types";

import "tendermint/crypto/proof.proto";

message Interquery {
  string creator = 1;

  string storeid = 2; 
  string path = 3; 
  bytes  key = 4; 
  uint64 timeoutHeight = 5; 
  string clientId = 6;
}

message InterqueryResult {
  string creator = 1;
  
  string storeid = 2; 
  bytes  data = 3; 
  uint64 height = 4; 
  string clientId = 5; 
  bool   success = 6;
  tendermint.crypto.ProofOps proof = 7;
}

message InterqueryTimeoutResult {
  string creator = 1;

  string storeid = 2; 
  uint64 timeoutHeight = 3; 
  string clientId = 4;
}

